Project EduNexus {
  database_type: 'PostgreSQL'
  Note: 'Course distribution platform'
}


Table user_roles {
  id SERIAL [PRIMARY KEY]
  title VARCHAR(30) [NOT NULL]
}

Table users {
  id BIGSERIAL [PRIMARY KEY]
  login VARCHAR(50) [NOT NULL, unique]
  password VARCHAR(60) [NOT NULL]
  surname VARCHAR(50) [NULL]
  firstname VARCHAR(100) [NULL]
  profile varchar(500) [NULL]
  user_role_id INT [ref: > user_roles.id, NOT NULL]
}

Table categories {
  id BIGSERIAL [PRIMARY KEY]
  name VARCHAR(50) [NOT NULL]
  color INT [NOT NULL]
}

Table courses {
  id BIGSERIAL [PRIMARY KEY]
  title VARCHAR(100) [NOT NULL]
  description TEXT [NOT NULL]
  image varchar(500) [NULL]
  course_provider BIGINT [ref: > users.id, not null]
}

Table  course_teachers{
  user_id BIGINT [ref: > users.id, not null]
  course_id BIGINT [ref: > courses.id, not null]
}

Table course_categories {
  course_id BIGINT [ref: > courses.id, not null]
  category_id BIGINT [ref: > categories.id, not null]
}

Table enrollments {
  id BIGSERIAL [PRIMARY KEY]
  enrolled_on DATE [NOT NULL]
  course_id BIGINT [ref: > courses.id, NOT NULL]
  user_id BIGINT [ref: > users.id, NOT NULL]
}

Table modules {
  id BIGSERIAL [PRIMARY KEY]
  title VARCHAR(100) [NOT NULL]
  course_id BIGINT [ref: > courses.id, NOT NULL]
}

Table assignments_types {
  id SERIAL [PRIMARY KEY]
  name VARCHAR(100) [NOT NULL]
}

Table assignments {
  id BIGSERIAL [PRIMARY KEY]
  module_id BIGINT [NOT NULL, ref: > modules.id]
  description TEXT [NOT NULL]
  content text [NULL]
  days int [NULL]
  assignment_type_id BIGINT [ref: > assignments_types.id, NOT NULL]
}

Table deadlines {
  id BIGSERIAL [PRIMARY KEY]
  assignments_id BIGINT [ref: > assignments.id, NOT NULL]
  deadline TIMESTAMP [NULL]
  user_id BIGINT [ref: > users.id, NOT NULL]
}


Table submissions {
  id BIGSERIAL [PRIMARY KEY]
  assignments_id BIGINT [ref: > assignments.id, NOT NULL]
  deadline_id BIGINT [ref: > deadlines.id, NOT NULL]
  delay INT [NOT NULL]
  content JSONB [NOT NULL]
}

Table threads {
    id BIGSERIAL [PRIMARY KEY]
    module_id BIGINT [ref: > modules.id, NOT NULL]
    title VARCHAR(200) [NOT NULL]
    content TEXT [NULL]
    user_id BIGINT [ref: > users.id, NOT NULL]
}
 
Table comments {
    id BIGSERIAL [PRIMARY KEY]
    user_id BIGINT [ref: > users.id, NOT NULL]
    content TEXT [NOT NULL] 
}

Table rating {
    id BIGSERIAL [primary key]
    comment_id BIGINT [ref: > comments.id, NOT NULL]
    rate bool [not null]
}
